# rem8Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: testing.yml
src/: emulator.cpp  emulator.h  main.cpp
src/imgui/backend/: imgui_impl_sdl2.cpp
src/user_interface/: graphics.cpp  graphics.h  window.cpp  window.h
src/utilities/: file.cpp  file.h  instrumentor.h
src/widgets/: control_panel.cpp  control_panel.h  file_explorer.cpp  file_explorer.h  widgets.cpp  widgets.h
tests/: CMakeLists.txt  test_emulator.cpp
